(bsc#1009118) fixes overlapping text narrow window

--- a/branding/css/spacewalk-fixes.less
+++ b/branding/css/spacewalk-fixes.less
@@ -30,3 +30,8 @@ div.form-control {
 div.checkbox.icon-wrapper i.fa {
     width: .6em;
 }
+
+/* bsc#1009118 overlapping text when resizing */
+.auto-width {
+    width: auto;
+}
